--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,14 @@
   body {
     margin: 0;
     font-family: 'Inter', sans-serif;
-    background: #fff0db ;
+    background: white ;
   }
   
 
   nav{
     height: 70px;
     width: 100%;
+    margin-bottom: 40px;
     display: inline-block;
     padding: 20px 36px;
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
@@ -20,8 +21,63 @@
     font-size: large;
     text-align: center;
     background-color: #6d7e6f;
-    color: #e9c6a6;
-    text-shadow: 2px 2px 3px black ;
+    color: white;
+    text-shadow: 1px 1px 2px black ;
+    
   }
 
-  .iconGlobe{filter:drop-shadow(1px 1px 2px rgb(0, 0, 0))}
+  .icon--globe{
+    filter:drop-shadow(1px 1px 2px rgb(0, 0, 0))
+  }
+
+  .icon--marker{
+    color: #F55A5A;
+  }
+
+  .travel--card{
+    margin: auto;
+    width: 65%;
+    border-bottom: 2px solid #F5F5F5;;
+    height: auto;
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .card--image{
+    width: 200px;
+    height: 265px;
+    object-fit: cover;
+    border-radius: 5px;
+  }
+
+  .card--info{
+    padding:20px;
+ 
+    display: flex;          
+    flex-direction: column; 
+    position: relative;
+  }
+
+  .location{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10.24px;
+    line-height: 12px;
+    letter-spacing: 0.17em;
+  }
+
+  .view--map{
+  letter-spacing: normal;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10.24px;
+  line-height: 12px;
+  margin-left:10px;
+/* identical to box height */
+text-decoration-line: underline;
+color: #918E9B;
+  }
+
