--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@
 
   .travel--card{
     margin: auto;
-    width: 65%;
+    width: 50%;
     border-bottom: 2px solid #F5F5F5;;
     height: auto;
     padding: 10px;
@@ -45,10 +45,11 @@
   }
   
   .card--image{
-    width: 200px;
-    height: 265px;
+    width: 126px;
+    height: 168px;
     object-fit: cover;
     border-radius: 5px;
+    margin-top: 18px;
   }
 
   .card--info{
@@ -63,7 +64,7 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
-    font-size: 10.24px;
+    font-size: 11.24px;
     line-height: 12px;
     letter-spacing: 0.17em;
   }
@@ -73,7 +74,7 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  font-size: 10.24px;
+  font-size: 11.24px;
   line-height: 12px;
   margin-left:10px;
 /* identical to box height */
@@ -81,3 +82,33 @@ text-decoration-line: underline;
 color: #918E9B;
   }
 
+
+  .landmark{
+  margin-top: 5px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 30px;
+  color: #2B283A;
+  }
+
+  .dates{
+  margin-top: -12px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 11.24px;
+  line-height: 12px;
+  color: #2B283A;
+  }
+
+  .details{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 11.24px;
+  line-height: 150%;
+/* or 15px */
+color: #2B283A;
+  }
