create data, pass objects as props

--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,7 @@ color: #918E9B;
   color: #2B283A;
   }
 
-  .dates{
+  .date{
   margin-top: -12px;
   font-family: 'Inter';
   font-style: normal;
